--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
 
     <!-- SEO Meta tags -->
     <meta name="title" content="Card Component" />
-    <meta name="description" content="Simple structured project containing flexible card component." />
+    <meta
+      name="description"
+      content="Simple structured project containing flexible card component."
+    />
     <meta name="keywords" content="card, component, react" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,8 +18,12 @@
     <meta name="author" content="Company Ltd" />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- PWA -->
     <link rel="apple-touch-icon" sizes="180x180" href="/pwa/apple-touch-icon.png" />
